--- a/.github/workflows/renew.yaml
+++ b/.github/workflows/renew.yaml
@@ -1,14 +1,14 @@
-name: ci
-run-name: ${{ github.actor }} triggered CI build
+name: Renew Agentforce Dev Org Lease
+run-name: ${{ github.actor }} triggered dev org renewal build
 #on: [push]
 on:
   schedule:
     - cron:  '30 20 * * MON'
   workflow_dispatch:
 jobs:
-  dev-org-ci:
+  dev-org-renew:
     runs-on: ubuntu-latest
-    environment: CI
+    environment: AFDevOrgRenew
     steps:
       - uses: actions/checkout@v4
         with: 
