--- a/.github/workflows/keepalive.yml
+++ b/.github/workflows/keepalive.yml
@@ -2,6 +2,7 @@ name: Keep Repository Active
 on:
   schedule:
     - cron: "0 0 1 * *" # Runs at midnight on the 1st of every month
+  workflow_dispatch:
 jobs:
   keepalive:
     runs-on: ubuntu-latest
